--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <head>
-  <title> PWA DEMO</title>
+  <title>开心旅游</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1 user-scalable=no">
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" type="text/css" href="main.css">
