设置 IOS Safari 上的添加至主屏幕元素

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="icon" href="/logo.png" type="image/png" />
+  <!--应用图标-->
+  <link rel="apple-touch-icon" href=“logo.png">
+  <!--启动画面-->
+  <link rel="apple-touch-startup-image" href="logo.png">
+  <!--应用名称-->
+  <meta name="apple-mobile-web-app-title" content="开心旅游">
+  <!--全屏效果-->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!--设置状态栏颜色-->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#fff">
 </head>
 
 <body>
